level 1 tutorial almost done

--- a/feat_scripts/Feat_Level_1.ipynb
+++ b/feat_scripts/Feat_Level_1.ipynb
@@ -1070,7 +1070,14 @@
     }
    },
    "source": [
-    "### All together we should have this"
+    "### All Together Now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://78.media.tumblr.com/62c56993084d8a851decf11106d64ab0/tumblr_nle68sXJFb1s8ir5qo1_400.gif)"
    ]
   },
   {
@@ -1195,7 +1202,14 @@
     }
    },
    "source": [
-    "## All together now!"
+    "## All Together Now!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://78.media.tumblr.com/62c56993084d8a851decf11106d64ab0/tumblr_nle68sXJFb1s8ir5qo1_400.gif)"
    ]
   },
   {
@@ -1782,7 +1796,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Like always lets make two functions: QA_writer( ) and main ( )\n",
     "### Next we are going to need think about what indicates a complete feat analysis"
@@ -1790,42 +1808,66 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Personally, I like to check the number of stats files produced. We are also going to want to check the registration and the stats."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "![](https://pbs.twimg.com/media/DQc3ndDUMAIl9gL.jpg:large)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "fail registration credit: https://twitter.com/DanielaJPalombo"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## The registration and the registration and stats are all contained in png images. This is a great oppertunity to create another html file like we did for the motion correction!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## First lets consider the main() function. What globals should be define? Remember we want to make an html"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "1. basedir\n",
     "2. writedir\n",
@@ -1835,14 +1877,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "## Concept Check: Fill in your main( ) so that you define the above variables."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![](https://imageog.flaticon.com/icons/png/512/3/3641.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF)"
    ]
@@ -1850,7 +1900,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "def main():\n",
@@ -1863,14 +1917,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Of course your paths will be different!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## The main( ) is looking good! Lets move on to the QA_writer( ).\n",
     "\n",
@@ -1879,7 +1941,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "I came up with the following:"
    ]
@@ -1887,7 +1953,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "def QA_writer(basedir,outfile,writedir):\n",
@@ -1900,7 +1970,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Since we are looking for png files in multiple subdirectories we could write multiple loops to look for each.... Or we can use the walk function from os to search each subdirectory for us!\n"
    ]
@@ -1908,7 +1982,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "        dict_of_files = {}\n",
@@ -1922,7 +2000,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "### os.walk is a little intimidating at first. It generates the following:\n",
     "* dirpath= the path to the directory\n",
@@ -1933,7 +2015,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "### So what is going on with this if/elif statement?\n",
     "* We want to find all the png files associated with registration and the statistical analysis. \n",
@@ -1945,7 +2031,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Concept check: Now that we have a dictionary of our png files, create a loop that will get the file and input it into html formatting. If you are stuck look how we did this in the preprocessing script"
    ]
@@ -1953,7 +2043,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "   for key in dict_of_files:\n",
@@ -1963,7 +2057,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "## Concept check: Finally, finish off the script with something that checks the number of cope files in each feat. If a feat directory is miss copes move it to a folder called fail"
    ]
@@ -1971,7 +2069,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "        if os.path.exists(os.path.join(basedir,'fails'))==False:\n",
@@ -1987,22 +2089,41 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![](https://imageog.flaticon.com/icons/png/512/3/3641.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## All together now!"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://78.media.tumblr.com/62c56993084d8a851decf11106d64ab0/tumblr_nle68sXJFb1s8ir5qo1_400.gif)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -2051,7 +2172,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Lets see how our feat analysis coming ..."
    ]
@@ -2059,7 +2184,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "def multi_split(listy,number):\n",
