--- a/feat_scripts/Feat_Level_1.ipynb
+++ b/feat_scripts/Feat_Level_1.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import glob\n",
@@ -561,6 +563,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -647,6 +650,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -674,6 +678,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -703,6 +708,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -739,6 +745,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -766,6 +773,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -849,6 +857,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -892,6 +901,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -929,6 +939,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -953,6 +964,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1084,6 +1096,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1166,6 +1179,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1216,6 +1230,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1398,6 +1413,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1469,6 +1485,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1516,6 +1533,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1577,6 +1595,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1615,6 +1634,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1703,6 +1723,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1901,6 +1922,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1954,6 +1976,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1983,6 +2006,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2044,6 +2068,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2070,6 +2095,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2120,6 +2146,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2182,9 +2209,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Hey wait.... what about the no registration ones...? Seems like that is going to be an issue.... "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## You're right we need a to do a couple extra steps!\n",
+    "* check that reg_standard exists in the first level\n",
+    "    * if it exists delete\n",
+    "* delete all .mat files in the reg folder\n",
+    "    * Replace with the identity matrix from fsl\n",
+    "* copy the mean_func.nii.gz to reg/standard.nii.gz\n",
+    "* check the voxel intensities in the stats/cope.nii.gz and reg_standard/stats/cope.nii.gz are EXACTLY the same \n",
+    "    * data dimension and pixel size should be the same\n",
+    "    * will have to do this after higher level analysis (reg_standard doesn't exist until then)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This seems like a good place to try writing a python module!\n",
+    "So far we have imported a lot of modules and they seem pretty awesome. Wouldn't it be cool to make one?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We briefly talked about how to create a module when we made our level1.py script. We needed that strange\n",
+    "```\n",
+    "if __name__ == '__main__':\n",
+    "```\n",
+    "We are going to use that again, because maybe sometimes we are going to want to run this script as is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Concept check: Write a python script called no_reg.py. This need to do the following:\n",
+    "* Check if each feat directory has a subdirectory called 'reg_standard'\n",
+    "    * If it does, delete it. \n",
+    "* Then we need to delete all the .mat files in the reg directory for each feat analysis\n",
+    "* Move the identity matrix (standard with fsl) to the reg directory for each feat analysis\n",
+    "* **Copy** the mean_func.nii.gz for each feat analysis to the reg directorys\n",
+    "\n",
+    "\n",
+    "A couple hints: \n",
+    "* The path to the identity matrix should look something like, '/usr/local/fsl/etc/flirtsch/ident.mat'\n",
+    "* We want to copy the mean_func.nii.gz, NOT move what module have we used to move and copy things?\n",
+    "* shutil has a function called rmtree, this will remove an entire directory tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## You should have something like this. Just as a reminder there are a lot of different ways to accomplish this task. If you have another way let me know, this is part of the process! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import shutil\n",
+    "\n",
+    "def reg_check(basedir,IDmat):\n",
+    "    for sub in glob.glob(os.path.join(basedir,'sub-*','grace_edit','*.feat')):\n",
+    "        if os.path.exists(os.path.join(sub,'reg_standard')):\n",
+    "            shutil.rmtree(os.path.join(sub,'reg_standard'))\n",
+    "            print('%s has the reg standard'%sub)\n",
+    "        \n",
+    "        for files in glob.glob(os.path.join(sub,'reg','*.mat')):\n",
+    "            print(files)\n",
+    "            os.remove(files)\n",
+    "        \n",
+    "        shutil.copy2(IDmat,os.path.join(sub,'reg'))\n",
+    "        meanFUNC=os.path.join(sub,'mean_func.nii.gz')\n",
+    "        regDIR=os.path.join(sub,'reg','standard.nii.gz')\n",
+    "        shutil.copy2(meanFUNC,regDIR)\n",
+    "        \n",
+    "                    \n",
+    "        \n",
+    "        \n",
+    "def main():\n",
+    "    basedir='/Users/gracer/Desktop/data/derivatives/task'\n",
+    "    IDmat='/usr/local/fsl/etc/flirtsch/ident.mat'\n",
+    "    reg_check(basedir,IDmat)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ok, lets make a couple tweeks so this will work as a module!\n",
+    "1. We are going to want to un-hard code our basedir and add BASEDIR as a parameter in main\n",
+    "2. We need to add that name check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import shutil\n",
+    "\n",
+    "def reg_check(basedir,IDmat):\n",
+    "    for sub in glob.glob(os.path.join(basedir,'sub-*','grace_edit','*.feat')):\n",
+    "        if os.path.exists(os.path.join(sub,'reg_standard')):\n",
+    "            shutil.rmtree(os.path.join(sub,'reg_standard'))\n",
+    "            print('%s has the reg standard'%sub)\n",
+    "        \n",
+    "        for files in glob.glob(os.path.join(sub,'reg','*.mat')):\n",
+    "            print(files)\n",
+    "            os.remove(files)\n",
+    "        \n",
+    "        shutil.copy2(IDmat,os.path.join(sub,'reg'))\n",
+    "        meanFUNC=os.path.join(sub,'mean_func.nii.gz')\n",
+    "        regDIR=os.path.join(sub,'reg','standard.nii.gz')\n",
+    "        shutil.copy2(meanFUNC,regDIR)\n",
+    "        \n",
+    "                    \n",
+    "        \n",
+    "        \n",
+    "def main(BASEDIR):\n",
+    "    basedir=BASEDIR\n",
+    "    IDmat='/usr/local/fsl/etc/flirtsch/ident.mat'\n",
+    "    reg_check(basedir,IDmat)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    BASEDIR='/Users/gracer/Desktop/data/derivatives/task'\n",
+    "    main(BASEDIR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This reminds us why keeping global variables in the main function is so useful. With a couple minor tweeks we were able to change a script into a module! Notice I kept the IDmat variable hardcoded. Since this is a native fsl file it **should** be the same for every installation of fsl!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Alright! Lets add this to our check_level1.py!\n",
+    "## Concept check: Incorportate your new module into the check_level1.py! Create functionality to allow for either registration or no registration feat analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import shutil\n",
+    "import no_reg\n",
+    "import datetime\n",
+    "import argparse\n",
+    "\n",
+    "def QA_writer(basedir,outfile,writedir,arglist):\n",
+    "    \n",
+    "    if os.path.exists(os.path.join(basedir,'fails'))==False:\n",
+    "                os.makedirs(os.path.join(basedir,'fails'))\n",
+    "            \n",
+    "    for file in glob.glob(os.path.join(basedir,'sub*','grace_edit','*.feat')):        \n",
+    "        if len(glob.glob(os.path.join(file,'stats','cope*.nii.gz')))==5:\n",
+    "            print(file+' has 5 cope files :D')\n",
+    "        else:\n",
+    "            print(file+' is missing copes, need to rerun')\n",
+    "            name=file.split('/')[9].split('.')[0]\n",
+    "            shutil.copytree(file,os.path.join(basedir,'fail',sub,name))\n",
+    "        \n",
+    "    if arglist['noreg']== False:\n",
+    "        for file in glob.glob(os.path.join(basedir,'sub*','grace_edit','*.feat')):\n",
+    "            sub=file.split('/')[7]\n",
+    "            dict_of_files = {}\n",
+    "            for (dirpath, dirnames, filenames) in os.walk(file):\n",
+    "                for filename in filenames:\n",
+    "                    if filename.startswith('fsl') or filename.startswith('vert'):\n",
+    "                        print('skipping')\n",
+    "                    elif filename.endswith('.png'): \n",
+    "                        dict_of_files[filename] = os.sep.join([dirpath, filename])\n",
+    "\n",
+    "            for key in dict_of_files:\n",
+    "                os.system(\"echo '<p>=============<p> %s %s <br><IMG BORDER=0 SRC=%s WIDTH=%s></BODY></HTML>' >> %s\"%(sub,key,dict_of_files[key],'100%', outfile))\n",
+    "                #shutil.copy(dict_of_files[key],writedir)\n",
+    "    else:\n",
+    "        print(\"no need to look at fake registration, but do need to clean up this reg dirctory!\")\n",
+    "        noreg.main(basedir)\n",
+    "        \n",
+    "        for design_file in os.path.join(file,'design*.png'):\n",
+    "            os.system(\"echo '<p>=============<p> %s %s <br><IMG BORDER=0 SRC=%s WIDTH=%s></BODY></HTML>' >> %s\"%(sub,design_file,'100%', outfile))\n",
+    "    \n",
+    "\n",
+    "def main():\n",
+    "    basedir='/Users/gracer/Desktop/data/derivatives/task'\n",
+    "    writedir='/Users/gracer/Desktop/data/'\n",
+    "    datestamp=datetime.datetime.now().strftime(\"%Y-%m-%d-%H_%M_%S\")\n",
+    "    outfile = os.path.join(writedir,'lev1_QA_%s.html'%datestamp)  \n",
+    "    parser=argparse.ArgumentParser(description='checking first level feat analysis')\n",
+    "    parser.add_argument('-noreg',dest='NOREG', action='store_true',\n",
+    "                        default=False, help='Did you already register your data (using ANTZ maybe)?')\n",
+    "    repl_dict={}\n",
+    "    args = parser.parse_args()\n",
+    "    arglist={}\n",
+    "    for a in args._get_kwargs():\n",
+    "        arglist[a[0]]=a[1]\n",
+    "    print(arglist)\n",
+    "    \n",
+    "    QA_writer(basedir,outfile,writedir,arglist)\n",
+    "main()\n",
+    "\n",
+    "os.chdir('/Users/gracer/Google Drive/fMRI_workshop/scripts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -2208,14 +2479,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
