shit this QA is nice

--- a/feat_scripts/Feat_Level_2.ipynb
+++ b/feat_scripts/Feat_Level_2.ipynb
@@ -127,6 +127,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ok, lets recap what all we need to do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* __CHANGE THE NUMBER OF INPUTS TO 2__\n",
+    "* Add both feat directories as inputs\n",
+    "* Add an output directory\n",
+    "* __DELETE EXTRA EV FROM STATS__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Concept Check: Open up an fsf file and add your variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Concept Check: How are we going to use python to change out these variables we have now coded in? What python data type (string, integer, dictionary, list, boolean) will need to generate in our script?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
